<resources>
    <string name="hello">Remota is an application which can be used as an air mouse and an air keyboard. First, go "help" menu item.</string>
    <string name="app_name">Remota</string>
    <string name="make_discoverable">Make discoverable</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="connect_device">Connect a device</string>
    <string name="scan_device">Scan for devices</string>
    <string name="scanning">Scanning for devices\.\.\.</string>
    <string name="preview_keyboard_layout">Preview keyboard</string>
    <string name="title_new_devices">New devices</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="help">Help</string>
    <string name="support_url">http://code.google.com/p/remota/</string>
    <string name="support_email">test.muroi@gmail.com</string>
    <string name="support_url_summery">Home page URL</string>
    <string name="support_email_summery">Email address</string>
    <string name="help_url">file:///android_asset/help/help.html</string>
    <string name="hello_url">file:///android_asset/help/hello.html</string>
    <string name="label_how_to_use_touch_pad">touch_pad</string>
    <string name="label_how_to_use_motion_pad">motion_pad</string>
    <string name="close">close</string>
    <string name="hz">H/Z</string>
    <string name="done">Done</string>
    <string name="touch_pad_mode">Touch pad mode</string>
    <string name="motion_pad_mode">Motion pad mode</string>
    <string name="touch_pad_mode_value">TOUCH_PAD_MODE</string>
    <string name="motion_pad_mode_value">MOTION_PAD_MODE</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_system">Depend on the system setting</string>
    <string name="orientation_auto">Auto</string>
    <string name="orientation_portrait_value">PORTRAIT</string>
    <string name="orientation_landscape_value">LANDSCAPE</string>
    <string name="orientation_system_value">DEPEND_ON_THE_SYSTEM_SETTING</string>
    <string name="orientation_auto_value">AUTO</string>
    <string name="keyboard_layout_default">Default</string>
    <string name="keyboard_layout_104">Keyboard 104</string>
    <string name="keyboard_layout_109">Keyboard 109</string>
    <string name="keyboard_layout_default_value">LAYOUT_DEFAULT</string>
    <string name="keyboard_layout_104_value">LAYOUT_104</string>
    <string name="keyboard_layout_109_value">LAYOUT_109</string>
    <string name="pref_category_general">General settings</string>
    <string name="pref_mode">Mode</string>
    <string name="pref_mode_summery">Select a user interface mode</string>
    <string name="pref_fullscreen">Full Screen</string>
    <string name="pref_fullscreen_summery">Set the full screen flag</string>
    <string name="pref_category_touch_pad">Touch pad settings</string>
    <string name="pref_touch_pad_orientation">Touch pad orientation</string>
    <string name="pref_touch_pad_orientation_summery">Set the screen orientation in the touch pad mode</string>
    <string name="pref_category_keyboard">Keyboard settings</string>
    <string name="pref_keyboard_orientation">Keyboard orientation</string>
    <string name="pref_keyboard_orientation_summery">Set the keyboard orientation</string>
    <string name="pref_keyboard_key_height">Key height</string>
    <string name="pref_keyboard_key_height_summery">
        Set the key height.
        After you choose a height, you can preview it by Menu key->Preview keyboard.
    </string>
    <string name="pref_keyboard_key_height_default_value">45</string>
    <string name="pref_keyboard_key_height_dialog_message">
        Set the key height(dip). 
        The default value is 45[dip]. 
        To adjust the key height to the display size, set the value 0.
    </string>
    <string name="pref_keyboard_layout">Keyboard layout</string>
    <string name="pref_keyboard_layout_summery">
        Set the keyboard layout.
        After you choose a layout, you can preview it by Menu key->Preview keyboard.
    </string>
    <string name="key1">` ~</string>
    <string name="scancode1">41</string>
    <string name="key2">1 !</string>
    <string name="scancode2">2</string>
    <string name="key3">2 \"</string>
    <string name="scancode3">3</string>
    <string name="key4">3 #</string>
    <string name="scancode4">4</string>
    <string name="key5">4 $</string>
    <string name="scancode5">5</string>
    <string name="key6">5 %</string>
    <string name="scancode6">6</string>
    <string name="key7">6 ^</string>
    <string name="scancode7">7</string>
    <string name="key8">7 &amp;</string>
    <string name="scancode8">8</string>
    <string name="key9">8 \'</string>
    <string name="scancode9">9</string>
    <string name="key10">9 (</string>
    <string name="scancode10">10</string>
    <string name="key11">0 )</string>
    <string name="scancode11">11</string>
    <string name="key12">- _</string>
    <string name="scancode12">12</string>
    <string name="key13">= +</string>
    <string name="scancode13">13</string>
    <string name="key14"></string>
    <string name="scancode14">125</string>
    <string name="key15">BS</string>
    <string name="scancode15">14</string>
    <string name="key16">Tab</string>
    <string name="scancode16">15</string>
    <string name="key17">Q</string>
    <string name="scancode17">16</string>
    <string name="key18">W</string>
    <string name="scancode18">17</string>
    <string name="key19">E</string>
    <string name="scancode19">18</string>
    <string name="key20">R</string>
    <string name="scancode20">19</string>
    <string name="key21">T</string>
    <string name="scancode21">20</string>
    <string name="key22">Y</string>
    <string name="scancode22">21</string>
    <string name="key23">U</string>
    <string name="scancode23">22</string>
    <string name="key24">I</string>
    <string name="scancode24">23</string>
    <string name="key25">O</string>
    <string name="scancode25">24</string>
    <string name="key26">P</string>
    <string name="scancode26">25</string>
    <string name="key27">[ {</string>
    <string name="scancode27">26</string>
    <string name="key28">] }</string>
    <string name="scancode28">27</string>
    <string name="key30">CapsLk</string>
    <string name="scancode30">58</string>
    <string name="key31">A</string>
    <string name="scancode31">30</string>
    <string name="key32">S</string>
    <string name="scancode32">31</string>
    <string name="key33">D</string>
    <string name="scancode33">32</string>
    <string name="key34">F</string>
    <string name="scancode34">33</string>
    <string name="key35">G</string>
    <string name="scancode35">34</string>
    <string name="key36">H</string>
    <string name="scancode36">35</string>
    <string name="key37">J</string>
    <string name="scancode37">36</string>
    <string name="key38">K</string>
    <string name="scancode38">37</string>
    <string name="key39">L</string>
    <string name="scancode39">38</string>
    <string name="key40">; :</string>
    <string name="scancode40">39</string>
    <string name="key41">: \'</string>
    <string name="scancode41">40</string>
    <string name="key42">] }</string>
    <string name="scancode42">43</string>
    <string name="key43">Enter</string>
    <string name="scancode43">28</string>
    <string name="key44">Shift</string>
    <string name="scancode44">42</string>
    <string name="key46">Z</string>
    <string name="scancode46">44</string>
    <string name="key47">X</string>
    <string name="scancode47">45</string>
    <string name="key48">C</string>
    <string name="scancode48">46</string>
    <string name="key49">V</string>
    <string name="scancode49">47</string>
    <string name="key50">B</string>
    <string name="scancode50">48</string>
    <string name="key51">N</string>
    <string name="scancode51">49</string>
    <string name="key52">M</string>
    <string name="scancode52">50</string>
    <string name="key53">, &lt;</string>
    <string name="scancode53">51</string>
    <string name="key54">. &gt;</string>
    <string name="scancode54">52</string>
    <string name="key55">/ ?</string>
    <string name="scancode55">53</string>
    <string name="key56"></string>
    <string name="scancode56">115</string>
    <string name="key57">Shift</string>
    <string name="scancode57">54</string>
    <string name="key58">Ctrl</string>
    <string name="scancode58">29</string>
    <string name="key60">Alt</string>
    <string name="scancode60">56</string>
    <string name="key61">Space</string>
    <string name="scancode61">57</string>
    <string name="key62">Alt</string>
    <string name="scancode62">-8136</string>
    <string name="key64">Ctrl</string>
    <string name="scancode64">-8163</string>
    <string name="key75">Insert</string>
    <string name="scancode75">-8110</string>
    <string name="key76">DEL</string>
    <string name="scancode76">-8109</string>
    <string name="key79">←</string>
    <string name="scancode79">75</string>
    <string name="key80">Home</string>
    <string name="scancode80">-8121</string>
    <string name="key81">End</string>
    <string name="scancode81">-8113</string>
    <string name="key83">↑</string>
    <string name="scancode83">72</string>
    <string name="key84">↓</string>
    <string name="scancode84">80</string>
    <string name="key85">PgUp</string>
    <string name="scancode85">-8119</string>
    <string name="key86">PgDn</string>
    <string name="scancode86">-8111</string>
    <string name="key89">→</string>
    <string name="scancode89">77</string>
    <string name="key90">NumLK</string>
    <string name="scancode90">69</string>
    <string name="key110">ESC</string>
    <string name="scancode110">1</string>
    <string name="key112">F1</string>
    <string name="scancode112">59</string>
    <string name="key113">F2</string>
    <string name="scancode113">60</string>
    <string name="key114">F3</string>
    <string name="scancode114">61</string>
    <string name="key115">F4</string>
    <string name="scancode115">62</string>
    <string name="key116">F5</string>
    <string name="scancode116">63</string>
    <string name="key117">F6</string>
    <string name="scancode117">64</string>
    <string name="key118">F7</string>
    <string name="scancode118">65</string>
    <string name="key119">F8</string>
    <string name="scancode119">66</string>
    <string name="key120">F9</string>
    <string name="scancode120">67</string>
    <string name="key121">F10</string>
    <string name="scancode121">68</string>
    <string name="key122">F11</string>
    <string name="scancode122">87</string>
    <string name="key123">F12</string>
    <string name="scancode123">88</string>
    <string name="key125">ScrLK</string>
    <string name="scancode125">70</string>
    <string name="key131"></string>
    <string name="scancode131">123</string>
    <string name="key132"></string>
    <string name="scancode132">121</string>
    <string name="key133"></string>
    <string name="scancode133">112</string>
    <string name="keyFn">Fn</string>
    <string name="scancodeFn">-2</string>
    <string name="keyWin">Win</string>
    <string name="scancodeWin">-8101</string>
    <string name="introduction">
      Remota is an application which can be used as an air mouse and an air keyboard.
      You can remote control your host PC with simple user interfaces like a touch pad or Nintendo Wii motion plus.
    </string>
</resources>