<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright (C) 2011-2012 Test Muroi (test.muroi@gmail.com)
 *
 * This program is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or 
 * (at your option) any later version.
 */
-->
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="10%p"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyHeight="14.2%p">

    <Row android:keyWidth="7.1%p">
        <Key android:codes="1" android:keyLabel="@string/key110"
        		   android:isRepeatable="true" android:keyEdgeFlags="left"/>
        <Key android:codes="59" android:keyLabel="@string/key112" android:isRepeatable="true"/>
        <Key android:codes="60" android:keyLabel="@string/key113" android:isRepeatable="true"/>
        <Key android:codes="61" android:keyLabel="@string/key114" android:isRepeatable="true"/>
        <Key android:codes="62" android:keyLabel="@string/key115" android:isRepeatable="true"/>
        <Key android:codes="63" android:keyLabel="@string/key116" android:isRepeatable="true"/>
        <Key android:codes="64" android:keyLabel="@string/key117" android:isRepeatable="true"/>
        <Key android:codes="65" android:keyLabel="@string/key118" android:isRepeatable="true"/>
        <Key android:codes="66" android:keyLabel="@string/key119" android:isRepeatable="true"/>
        <Key android:codes="67" android:keyLabel="@string/key120" android:isRepeatable="true"/>
        <Key android:codes="68" android:keyLabel="@string/key121" android:isRepeatable="true"/>
        <Key android:codes="87" android:keyLabel="@string/key122" android:isRepeatable="true"/>
        <Key android:codes="88" android:keyLabel="@string/key123" android:isRepeatable="true"/>
        <Key android:codes="-8109" android:keyLabel="@string/key76"
        		   android:isRepeatable="true" android:keyEdgeFlags="right"/>
    </Row>

    <Row android:keyWidth="8.3%p">
        <Key android:codes="41" android:keyLabel="@string/key1"	android:keyWidth="7.0%p" android:keyEdgeFlags="left"/>
        <Key android:codes="2" android:keyLabel="@string/key2" android:isRepeatable="true"/>
        <Key android:codes="3" android:keyLabel="@string/key3" android:isRepeatable="true"/>
        <Key android:codes="4" android:keyLabel="@string/key4" android:isRepeatable="true"/>
        <Key android:codes="5" android:keyLabel="@string/key5" android:isRepeatable="true"/>
        <Key android:codes="6" android:keyLabel="@string/key6" android:isRepeatable="true"/>
        <Key android:codes="7" android:keyLabel="@string/key7" android:isRepeatable="true"/>
        <Key android:codes="8" android:keyLabel="@string/key8" android:isRepeatable="true"/>
        <Key android:codes="9" android:keyLabel="@string/key9" android:isRepeatable="true"/>
        <Key android:codes="10" android:keyLabel="@string/key10" android:isRepeatable="true"/>
        <Key android:codes="11" android:keyLabel="@string/key11"
        		   android:isRepeatable="true"/>
        <Key android:codes="14" android:keyLabel="@string/key15"
                android:keyWidth="10%p" android:isRepeatable="true"
                android:keyEdgeFlags="right"/>        		   
    </Row>

    <Row>
	    <!--<Key android:codes="15" android:keyLabel="@string/key16"
        		  android:keyWidth="7.5%p" android:keyEdgeFlags="left"/>-->
        <Key android:codes="16" android:keyLabel="@string/key17"
        		   android:isRepeatable="true" android:keyEdgeFlags="left"/>
        <Key android:codes="17" android:keyLabel="@string/key18" android:isRepeatable="true"/>
        <Key android:codes="18" android:keyLabel="@string/key19" android:isRepeatable="true"/>
        <Key android:codes="19" android:keyLabel="@string/key20" android:isRepeatable="true"/>
        <Key android:codes="20" android:keyLabel="@string/key21" android:isRepeatable="true"/>
        <Key android:codes="21" android:keyLabel="@string/key22" android:isRepeatable="true"/>
        <Key android:codes="22" android:keyLabel="@string/key23" android:isRepeatable="true"/>
        <Key android:codes="23" android:keyLabel="@string/key24" android:isRepeatable="true"/>
        <Key android:codes="24" android:keyLabel="@string/key25" android:isRepeatable="true"/>
        <Key android:codes="25" android:keyLabel="@string/key26"
        		   android:isRepeatable="true" android:keyEdgeFlags="right"/>
    </Row>
    
    <Row>
        <Key android:codes="15" android:keyLabel="@string/key16"
        		  android:keyWidth="7.5%p" android:keyEdgeFlags="left"/>    
        <!--<Key android:codes="58" android:keyLabel="@string/key30"
        		  android:keyEdgeFlags="left"/>-->
        <Key android:codes="30" android:keyLabel="@string/key31"
        		   android:isRepeatable="true" android:horizontalGap="0%p"/> 
        <Key android:codes="31" android:keyLabel="@string/key32" android:isRepeatable="true"/>
        <Key android:codes="32" android:keyLabel="@string/key33" android:isRepeatable="true"/>
        <Key android:codes="33" android:keyLabel="@string/key34" android:isRepeatable="true"/>
        <Key android:codes="34" android:keyLabel="@string/key35" android:isRepeatable="true"/>
        <Key android:codes="35" android:keyLabel="@string/key36" android:isRepeatable="true"/>
        <Key android:codes="36" android:keyLabel="@string/key37" android:isRepeatable="true"/>
        <Key android:codes="37" android:keyLabel="@string/key38" android:isRepeatable="true"/>
        <Key android:codes="38" android:keyLabel="@string/key39"
        		   android:isRepeatable="true" android:keyEdgeFlags="right"/>
    </Row>
    
    <Row>
        <Key android:codes="42" android:keyLabel="@string/key44"
                android:keyWidth="12.5%p" android:isModifier="true"
                android:isSticky="true" android:keyEdgeFlags="left"/>
        <Key android:codes="44" android:keyLabel="@string/key46" android:isRepeatable="true"/>
        <Key android:codes="45" android:keyLabel="@string/key47" android:isRepeatable="true"/>
        <Key android:codes="46" android:keyLabel="@string/key48" android:isRepeatable="true"/>
        <Key android:codes="47" android:keyLabel="@string/key49" android:isRepeatable="true"/>
        <Key android:codes="48" android:keyLabel="@string/key50" android:isRepeatable="true"/>
        <Key android:codes="49" android:keyLabel="@string/key51" android:isRepeatable="true"/>
        <Key android:codes="50" android:keyLabel="@string/key52" android:isRepeatable="true"/>
        <Key android:codes="28" android:keyLabel="@string/key43"
                android:keyWidth="17.5%p" android:keyEdgeFlags="right"/>
    </Row>
    
    <Row android:keyWidth="8.3%p">
        <Key android:codes="12" android:keyLabel="@string/key12"
        		   android:isRepeatable="true" android:keyEdgeFlags="left"/>
        <Key android:codes="13" android:keyLabel="@string/key13" android:isRepeatable="true"/>
        <Key android:codes="125" android:keyLabel="@string/key14" android:isRepeatable="true"/>
        <Key android:codes="26" android:keyLabel="@string/key27" android:isRepeatable="true"/>
        <Key android:codes="27" android:keyLabel="@string/key28" android:isRepeatable="true"/>
        <Key android:codes="39" android:keyLabel="@string/key40" android:isRepeatable="true"/>
        <Key android:codes="40" android:keyLabel="@string/key41" android:isRepeatable="true"/>
        <Key android:codes="43" android:keyLabel="@string/key42" android:isRepeatable="true"/>
        <Key android:codes="51" android:keyLabel="@string/key53" android:isRepeatable="true"/>
        <Key android:codes="52" android:keyLabel="@string/key54" android:isRepeatable="true"/>
        <Key android:codes="53" android:keyLabel="@string/key55" android:isRepeatable="true"/>
        <Key android:codes="115" android:keyLabel="@string/key56"
        		   android:isRepeatable="true" android:keyEdgeFlags="right"/>
    </Row>
    
    <Row android:keyWidth="9.0%p" 
	    android:keyboardMode="@integer/keyboard_mode_normal" 
	    android:rowEdgeFlags="bottom">
		<Key android:codes="29" android:keyLabel="@string/key58"
			android:isModifier="true"
			android:keyEdgeFlags="left"
			android:isSticky="true"/>
		<Key android:codes="-2" android:keyLabel="@string/keyFn"/>
		<Key android:codes="-8101" android:keyLabel="@string/keyWin"/>
		<Key android:codes="56" android:keyLabel="@string/key60"
			android:isModifier="true"
			android:isSticky="true"/>
        <Key android:codes="57" android:keyLabel="@string/key61"
			android:keyWidth="28%p" android:isRepeatable="true"/>
        <Key android:codes="75" android:keyLabel="@string/key79"
			android:isRepeatable="true"/>
        <Key android:codes="77" android:keyLabel="@string/key89"
			android:isRepeatable="true"/>
        <Key android:codes="80" android:keyLabel="@string/key84"
			android:isRepeatable="true"/>
        <Key android:codes="72" android:keyLabel="@string/key83"
			android:isRepeatable="true"/>
        <!--<Key android:codes="-3" android:keyLabel="@string/done"
                android:keyWidth="20%p" android:keyEdgeFlags="right"/>-->
    </Row>
    
    <Row android:keyWidth="9.0%p"
		android:keyboardMode="@integer/keyboard_mode_fn" 
		android:rowEdgeFlags="bottom">
		<Key android:codes="29" android:keyLabel="@string/key58"
			android:isModifier="true"
			android:keyEdgeFlags="left"
			android:isSticky="true"/>
		<Key android:codes="-2" android:keyLabel="@string/keyFn"/>
		<Key android:codes="-8101" android:keyLabel="@string/keyWin"/>
		<Key android:codes="56" android:keyLabel="@string/key60"
			android:isModifier="true"
			android:isSticky="true"/>
        <Key android:codes="57" android:keyLabel="@string/key61"
			android:keyWidth="28%p" android:isRepeatable="true"/>
        <Key android:codes="-8121" android:keyLabel="@string/key80"
			android:isRepeatable="true"/>
        <Key android:codes="-8113" android:keyLabel="@string/key81"
			android:isRepeatable="true"/>
        <Key android:codes="-8111" android:keyLabel="@string/key86"
			android:isRepeatable="true"/>
        <Key android:codes="-8119" android:keyLabel="@string/key85"
			android:isRepeatable="true"/>
        <!--<Key android:codes="-3" android:keyLabel="@string/done"
                android:keyWidth="20%p" android:keyEdgeFlags="right"/>-->
    </Row>
</Keyboard>
