<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright (C) 2011-2012 Test Muroi (test.muroi@gmail.com)
 *
 * This program is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or 
 * (at your option) any later version.
 */
-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/connect_device" android:id="@+id/connect_device" android:icon="@android:drawable/ic_menu_search"></item>
    <item android:id="@+id/make_discoverable" android:title="@string/make_discoverable" android:icon="@android:drawable/ic_menu_myplaces"></item>
    <item android:id="@+id/settings" android:title="@string/settings" android:icon="@android:drawable/ic_menu_preferences"></item>
    <item android:id="@+id/help" android:icon="@android:drawable/ic_menu_help" android:title="@string/help"></item><item android:id="@+id/information" android:icon="@android:drawable/ic_menu_info_details" android:title="@string/information"></item>
</menu>
