<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright (C) 2011-2012 Test Muroi (test.muroi@gmail.com)
 *
 * This program is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or 
 * (at your option) any later version.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:layout_gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" android:layout_gravity="center_vertical|center_horizontal" android:textSize="20dip"/>

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"/>
    
   	<TextView
        android:id="@+id/textViewUrl_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center_vertical|center_horizontal"/>
    
    <TextView
        android:id="@+id/textViewUrlSummery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_url_summery"
        android:layout_gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/textViewUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_url"
        android:autoLink="web" 
        android:layout_gravity="center_vertical|center_horizontal"/>
    
	<TextView
        android:id="@+id/textViewEmail_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/textViewEmailSummery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_email_summery"
        android:layout_gravity="center_vertical|center_horizontal"/>
    
    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_email"
        android:autoLink="email" 
        android:layout_gravity="center_vertical|center_horizontal"/>

</LinearLayout>