<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright (C) 2011-2012 Test Muroi (test.muroi@gmail.com)
 *
 * This program is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or 
 * (at your option) any later version.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:text="@string/title_paired_devices" android:layout_height="wrap_content" android:id="@+id/title_paired_devices" android:layout_width="wrap_content" android:textStyle="bold"></TextView>
    <ListView android:layout_weight="1" android:stackFromBottom="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/paired_devices_list" android:layout_gravity="top"></ListView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/title_new_devices" android:text="@string/title_new_devices" android:visibility="gone" android:textStyle="bold"></TextView>
    <ListView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/new_devices_list" android:layout_weight="2" android:stackFromBottom="false"></ListView>
    <Button android:layout_height="wrap_content" android:text="@string/scan_device" android:layout_width="wrap_content" android:id="@+id/button_scan" android:layout_gravity="center"></Button>
</LinearLayout>
